syntax = "proto3";

option csharp_namespace = "Proto.DTO.TimerSettings";

message TimerSettingsProto {
  string timerSettingsId = 1;
  int32 documentationSaveInterval = 2;
  int32 snapshotSaveInterval = 3;
}
