syntax = "proto3";

import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Notifications.TimerSettings";

service NotificationService {
  rpc SendDocuTimerSaveIntervalChanged(DocuTimerSaveIntervalChangedNotification) returns (NotificationResponse);
  rpc SendSnapshotSaveIntervalChanged(SnapshotSaveIntervalChangedNotification) returns (NotificationResponse);
  rpc SendTimerSettingsCreated(TimerSettingsCreatedNotification) returns (NotificationResponse);
}

service TimerSettingsNotificationService {
  rpc SubscribeTimerSettingsNotifications(SubscribeRequest) returns (stream TimerSettingsNotification);
}

message TimerSettingsNotification {
  oneof notification {
    DocuTimerSaveIntervalChangedNotification docuTimerSaveIntervalChanged = 1;
    SnapshotSaveIntervalChangedNotification snapshotSaveIntervalChanged = 2;
    TimerSettingsCreatedNotification timerSettingsCreated = 3;
  }
}

message DocuTimerSaveIntervalChangedNotification {
  string timerSettingsId = 1;
  int32 docuTimerSaveInterval = 2;
  TraceDataProto traceData = 3;
}

message SnapshotSaveIntervalChangedNotification {
  string timerSettingsId = 1;
  int32 snapshotSaveInterval = 2;
  TraceDataProto traceData = 3;
}

message TimerSettingsCreatedNotification {
  string timerSettingsId = 1;
  int32 documentationSaveInterval = 2;
  int32 snapshotSaveInterval = 3;
  TraceDataProto traceData = 4;
}

message NotificationResponse {
  bool success = 1;
}

message SubscribeRequest {
}
